exports[`<RuleLabel /> snapshot tests matches snapshot of when it is active 1`] = `
<div
  className="rule-label"
  onClick={[Function]}
  style={
    Object {
      "backgroundColor": "#FF0000",
      "borderColor": "transparent",
    }
  }>
  Example Rule
  <span
    style={
      Object {
        "color": "#666666",
        "display": "block",
        "float": "right",
      }
    }>
    (1)
  </span>
</div>
`;

exports[`<RuleLabel /> snapshot tests matches snapshot of when it is not active 1`] = `
<div
  className="rule-label"
  onClick={[Function]}
  style={
    Object {
      "backgroundColor": "transparent",
      "borderColor": "#e6e6e6",
    }
  }>
  Example Rule
  <span
    style={
      Object {
        "color": "#666666",
        "display": "block",
        "float": "right",
      }
    }>
    (1)
  </span>
</div>
`;
